feat(ai-chat): 新增流式聊天取消功能和消息持久化优化
- 在AIChatEnum中新增REQUEST_ID_REQUIRED错误码
- 在ChatMessageController中新增cancelChatStreamKafka接口用于取消Kafka流式聊天
- 优化ChatMessageServiceImpl中的聊天逻辑，自动设置sessionId
- 实现流式响应的持久化处理，支持在完成、取消和错误时保存消息
- 添加向量化对话内容功能，在聊天结束后自动将QA对存入知识库
- 移除冗余的UserContextUtil调用，改为从sessionVO获取userId
- 重构ChatMessageUtil中的知识检索逻辑，分离知识库和文件内容检索
- 优化FileDocumentServiceImpl中的文件上传逻辑，增强文件类型校验
- 在FileDocumentController中新增根据会话ID获取文件信息列表接口
- 多处代码清理和性能优化，包括使用toList()替代collect(Collectors.toList())